--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -1,36 +1,36 @@
 apiVersion: apps/v1
-kind: Deployment # Kubernetes resource kind we are creating
-metadata:
-  name: spring-boot-k8s-deployment
+kind: Deployment
+metadata: 
+  name: user-deployment
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: spring-boot-k8s
-  replicas: 2 # Number of replicas that will be created for this deployment
+      app: user-service
   template:
     metadata:
       labels:
-        app: spring-boot-k8s
+        app: user-service
     spec:
       containers:
-        - name: spring-boot-k8s
-          image: javatechie/devops-integration # Image that will be used to containers in the cluster
-          imagePullPolicy: IfNotPresent
+        - name: user-service
+          image: yohenba/user-service
+          imagePullPolicy: ifNotPresent
           ports:
-            - containerPort: 8080 # The port that the container is running on in the cluster
+          - containerPort: 8080
 
 
 ---
-
+ 
 apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
-  name: springboot-k8ssvc
+  name: user-service
 spec:
   selector:
-    app: spring-boot-k8s
+    app: user-service
   ports:
     - protocol: "TCP"
       port: 8080 # The port that the service is running on in the cluster
       targetPort: 8080 # The port exposed by the service
-  type: NodePort # type of the service.
+  type: NodePort 
