--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,22 +15,24 @@ spec:
       containers:
         - name: user-service
           image: yohenba/user-service
-          imagePullPolicy: ifNotPresent
           ports:
           - containerPort: 8080
 
-
 ---
  
-apiVersion: v1 # Kubernetes API version
-kind: Service # Kubernetes resource kind we are creating
-metadata: # Metadata of the resource kind we are creating
+apiVersion: v1 
+kind: Service 
+metadata: 
   name: user-service
 spec:
   selector:
     app: user-service
   ports:
-    - protocol: "TCP"
-      port: 8080 # The port that the service is running on in the cluster
-      targetPort: 8080 # The port exposed by the service
-  type: NodePort 
+    - protocol: TCP
+      port: 8080 
+      targetPort: 8080
+
+
+
+
+
