--- a/application.yaml
+++ b/application.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/Yohenba18/devops-automation.git
     targetRevision: HEAD
-    path: ./deployment.yaml
+    path: dev
   destination:
     server: https://kubernetes.default.svc 
     namespace: user
