Done by Jenkins Job changemanifest: 104

--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: user-service
-          image: yohenba/user-service:{{BUILD_NUMBER}}
+          image: yohenba/user-service:104
           ports:
           - containerPort: 8080
 
